Sush, pulkit | #00 | Fixing failsafe plugin. Now running ITs as part of the build. Fixing some test